; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wifi_provisioning/src/extr_manager.c_wifi_prov_mgr_get_wifi_disconnect_reason.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wifi_provisioning/src/extr_manager.c_wifi_prov_mgr_get_wifi_disconnect_reason.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@prov_ctx_lock = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Provisioning manager not initialized\00", align 1
@ESP_ERR_INVALID_STATE = common dso_local global i32 0, align 4
@prov_ctx = common dso_local global %struct.TYPE_2__* null, align 8
@ESP_FAIL = common dso_local global i32 0, align 4
@WIFI_PROV_STA_DISCONNECTED = common dso_local global i64 0, align 8
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wifi_prov_mgr_get_wifi_disconnect_reason(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32, i32* @prov_ctx_lock, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @TAG, align 4
  %8 = call i32 @ESP_LOGE(i32 %7, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  store i32 %9, i32* %2, align 4
  br label %40

10:                                               ; preds = %1
  %11 = load i32, i32* @prov_ctx_lock, align 4
  %12 = call i32 @ACQUIRE_LOCK(i32 %11)
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @prov_ctx, align 8
  %14 = icmp eq %struct.TYPE_2__* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %10
  %16 = load i32*, i32** %3, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %22

18:                                               ; preds = %15, %10
  %19 = load i32, i32* @prov_ctx_lock, align 4
  %20 = call i32 @RELEASE_LOCK(i32 %19)
  %21 = load i32, i32* @ESP_FAIL, align 4
  store i32 %21, i32* %2, align 4
  br label %40

22:                                               ; preds = %15
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** @prov_ctx, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @WIFI_PROV_STA_DISCONNECTED, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %32

28:                                               ; preds = %22
  %29 = load i32, i32* @prov_ctx_lock, align 4
  %30 = call i32 @RELEASE_LOCK(i32 %29)
  %31 = load i32, i32* @ESP_FAIL, align 4
  store i32 %31, i32* %2, align 4
  br label %40

32:                                               ; preds = %22
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** @prov_ctx, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = load i32*, i32** %3, align 8
  store i32 %35, i32* %36, align 4
  %37 = load i32, i32* @prov_ctx_lock, align 4
  %38 = call i32 @RELEASE_LOCK(i32 %37)
  %39 = load i32, i32* @ESP_OK, align 4
  store i32 %39, i32* %2, align 4
  br label %40

40:                                               ; preds = %32, %28, %18, %6
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @ESP_LOGE(i32, i8*) #1

declare dso_local i32 @ACQUIRE_LOCK(i32) #1

declare dso_local i32 @RELEASE_LOCK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
